--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ type Props = {
   currentHref?: string;
 };
 
-const { currentTitle, currentHref } = Astro.props as Props;
+const { currentTitle } = Astro.props as Props;
 ---
 
 <header id="nav-wrapper">
@@ -27,15 +27,9 @@ const { currentTitle, currentHref } = Astro.props as Props;
               /
             </li>
             <li class="breadcrumb-current">
-              {currentHref ? (
-                <HeaderLink href={currentHref} aria-current="page" title={currentTitle}>
-                  {currentTitle}
-                </HeaderLink>
-              ) : (
-                <span aria-current="page" title={currentTitle}>
-                  {currentTitle}
-                </span>
-              )}
+              <span class="active" aria-current="page" title={currentTitle}>
+                {currentTitle}
+              </span>
             </li>
           </Fragment>
         )
